Clean up user interface a bit.

--- a/lib/analysis/analysis_toolbar.html
+++ b/lib/analysis/analysis_toolbar.html
@@ -1,14 +1,14 @@
 <atom-panel id='analysis-toolbar' class='from-bottom' rv-if="it.shouldShow">
-  <div class="padded">
-    <h3>Dart Tools</h3>
-    <div>
-      Status:
+  <div class="padded container">
+    <h6>Dart Tools</h6>
+    <div class='status'>
       <span rv-unless="it.hasProblems < errorCount warningCount">
-        <i class="icon-check"></i> A OK!
+        <i class="icon-check"></i> Everything is A OK!
       </span>
       <span rv-if="it.hasProblems < errorCount warningCount">
-        warnings: <span rv-text="it.warningCount"></span>
-        errors: <span rv-text="it.errorCount"></span>
+        <span rv-text="it.errorCount"
+          class="badge badge-error icon icon-stop">
+        </span>
       </span>
     </div>
   </div>
