--- a/lib/info/quick_info_view.html
+++ b/lib/info/quick_info_view.html
@@ -3,6 +3,7 @@
     <div rv-each-problem="it.problems"
       rv-class="problem.severity | lowerCase"
       data-dart-analysis>
+      <span class="badge">Dart</span>
       { problem | formattedProblem }
     </div>
   </div>
