--- a/lib/analysis/analysis_toolbar.html
+++ b/lib/analysis/analysis_toolbar.html
@@ -6,7 +6,7 @@
         <i class="icon-check"></i> Everything is A OK!
       </span>
       <span rv-if="it.hasProblems < errorCount warningCount">
-        <button class="btn text-error">
+        <button class="btn text-error" rv-on-click="it.showProblems">
           <span rv-text="it.errorCount"
             class="">
           </span>
