Problem View: use relative paths.

--- a/lib/info/problem_view.html
+++ b/lib/info/problem_view.html
@@ -11,7 +11,7 @@
       rv-data-col="problem.location.startColumn"
       rv-on-click="it.navigateToProblem">
 
-      { problem.location.file } : { problem.message }
+      { problem.location.file | relativePath } : { problem.message }
     </a>
 
   </div>
