--- a/lib/analysis/analysis_toolbar.html
+++ b/lib/analysis/analysis_toolbar.html
@@ -1,17 +1,17 @@
 <atom-panel id='analysis-toolbar' class='from-bottom' rv-if="it.shouldShow">
-  <div class="padded container">
+  <div class="container">
     <h6>Dart Tools</h6>
     <div class='status'>
       <span rv-unless="it.hasProblems < errorCount warningCount">
         <i class="icon-check"></i> Everything is A OK!
       </span>
       <span rv-if="it.hasProblems < errorCount warningCount">
-        <button class="btn text-error" rv-on-click="it.showProblems">
+        <a class="text-error" rv-on-click="it.showProblems">
           <span rv-text="it.errorCount"
             class="">
           </span>
           errors
-        </button>
+        </a>
       </span>
     </div>
   </div>
