--- a/lib/sdk/sdk_info.html
+++ b/lib/sdk/sdk_info.html
@@ -8,11 +8,11 @@
         <h2>Dart SDK Information</h2>
       </div>
       <div class="panel-body padded">
-        <h3>Current SDK Path</h3>
-        <p>{ it.currentSdk }</p>
+        <h3>SDK path</h3>
+        <p>{ it.sdkPath }</p>
 
-        <h3>Current SDK</h3>
-        <p>{ it.version }</p>
+        <h3>SDK version</h3>
+        <p>{ it.sdkVersion }</p>
       </div>
     </div>
   </div>
