--- a/lib/pub/pub_status_view.html
+++ b/lib/pub/pub_status_view.html
@@ -1,4 +1,4 @@
-<atom-panel class='overlay from-bottom' rv-if="it.shouldShow">
+<atom-panel class='overlay from-bottom pub-status' rv-if="it.shouldShow">
   <div class="padded">
     <div class="inset-panel">
       <div class="panel-heading">
