revise the errors display

--- a/lib/analysis/analysis_toolbar.html
+++ b/lib/analysis/analysis_toolbar.html
@@ -7,7 +7,7 @@
       </span>
       <span rv-if="it.problemCount">
         <a class="text-warning" rv-on-click="it.showProblems">
-          <span rv-text="it.problemCount" class=""> </span> issues
+          <span rv-text="it.problemCount"> </span> issues
         </a>
       </span>
     </div>
