--- a/lib/info/quick_info_view.html
+++ b/lib/info/quick_info_view.html
@@ -1,10 +1,15 @@
 <atom-panel id='quick-info-view' class='from-bottom' rv-if="it.shouldShow < problems">
   <div class="padded">
-    <div rv-each-problem="it.problems"
-      rv-class="problem.severity | lowerCase"
-      data-dart-analysis>
-      <span class="badge">Dart</span>
-      { problem | formattedProblem }
+    <div rv-each-problem="it.problems">
+      <div class="badge inline-block" rv-badge="problem">
+        dart: {problem.type | formatProblemType}
+      </div>
+      <div class="inline-block">
+        {problem.message}
+      </div>
+      <div class='inline-block text-subtle'>
+        {problem.location | formatLocation}
+      </div>
     </div>
   </div>
 </atom-panel>
