change the sdk info and pub dialogs to modal dialogs

--- a/lib/info/quick_info_view.html
+++ b/lib/info/quick_info_view.html
@@ -1,4 +1,4 @@
-<atom-panel id='quick-info-view' class='from-bottom' rv-if="it.shouldShow < problems">
+<atom-panel id='quick-info-view' class='from-bottom'>
   <div class="padded">
     <div rv-each-problem="it.problems">
       <div class="badge inline-block" rv-badge="problem">
